\name{NEWS}
\title{News for Package \pkg{smacof}}
\encoding{UTF-8}

\section{Changes in Version 2.1-6}{
  \itemize{
    \item Double top level assignment for mds() removed.
    \item Bug in smacofConstraint() for ndim = 1 fixed.
    }
}


\section{Changes in Version 2.1-5}{
  \itemize{
    \item JSS reference updated.
    \item Principal axis transformation argument added to mds().
    \item Correlation between X and Y-hat added to Procrustes().
    \item sim2diss() fixed for missing similarities.
    }
} 


\section{Changes in Version 2.1-4}{
  \itemize{
    \item bugfix in unfolding() for user-specified starting solution.
    }
} 


\section{Changes in Version 2.1-3}{
  \itemize{
    \item stress0() is now an object of class "smacof".
    }
} 


\section{Changes in Version 2.1-2}{
  \itemize{
    \item Bug in smacofConstraint() for constraint.ties fixed. 
    }
} 

\section{Changes in Version 2.1-1}{
  \itemize{
    \item svm_mdsplot() updated.
    \item Nutshell vignettes added.
    }
}  

\section{Changes in Version 2.1-0}{
  \itemize{
    \item Alienation coefficient added to Procrustes().
    \item Procrustes() returns pairwise distances.
    \item jackknife() renamed to jackmds().
    \item Legend option for jakcknife added to plot.smacofJK().
    \item In smacofConstraint() "linear" constraint changed to "unrestricted".
    \item In unfolding() "matrix" changed to "unconditional". 
    \item omega default in unfolding() set to 1. 
    \item Guttman datasets added (Guttman1965, Guttman1991). 
    \item Second rectangle dataset added (area-shape). 
    \item svm_mdsplot() added for facet plotting based on SVM fit.
    \item Argument "scale" in biplotmds() added. 
    }
}


\section{Changes in Version 2.0-0}{
  \itemize{
    \item Color shading added to plot.icexplore().
    \item Fixed column coordinates version of vmu() implemented. 
    \item Vignette added.
    \item Help files for indvalues and PVQ40 data updated.